# hyprlang-pybind

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: building.md  error-handling.md  high-level-api.md  installation.md  low-level-api.md  schema.md  syntax.md
src/: bindings.cpp
src/hyprlang_pybind/: __init__.py
tests/: dummy.py  test_high_level.py  test_low_level.py
tests/fixtures/: test.conf
